<center style="
    border-radius:4px;
    border: 1px solid #cfd7e6;
    box-shadow: 0 1px 3px 0 rgba(89,105,129,.05), 0 1px 1px 0 rgba(0,0,0,.025);
    padding: 1em;"
    >

@startuml
package Data_Access{
    entity "User" <<ENTITY>>  {
      + id <<INT>>
      + login <<TEXT>>
      + first_name <<TEXT>> 
      + last_name <<TEXT>>
      + password <<TEXT>> 
      + email <<TEXT>> 
    }
    
    entity "Role" <<ENTITY>>  {
      + id <<INT>> 
      + alias <<TEXT>>
    }
    
    entity "Permission_Role" {
    
    }
    
    entity "Permission" <<ENTITY>> {
      + id <<INT>>
      + alias <<TEXT>>
    }
    
    entity "Access" <<ENTITY>>  {
      + id <<INT>> 
    }
}
package Resources{
    entity "Dataset" <<ENTITY>>  {
      + id <<INT>> 
      + title <<TEXT>> 
      + description <<TEXT>>
      + rating <<FLOAT>>
    }
    
    entity "Datafile" <<ENTITY>>  {
      + id <<INT>> 
      + guid <<GUID>>
      + alias <<TEXT>> 
      + mime <<TEXT>>
      + description <<TEXT>>
      + url <<URL>>
      + size <<NUMBER>> 
      + uploadedAt <<DATETIME>> 
    }
    
    
    entity "Category" <<ENTITY>>  {
      + id <<INT>> 
      + name <<TEXT>> 
      + description <<TEXT>> 
    }
}

package Resource_Version_Control{

    entity "Update" <<ENTITY>> {
        + hash <<TEXT>>
        + updatedAt <<DATETIME>>
        + message <<TEXT>>
        + diff <<TEXT>>
    }
}
User "0.*"-u->"1.1" Role : role
Role "1.1"<-l-"0.*" Permission_Role : role
Permission_Role "0.*"-l->"1.1" Permission : permission
User "1.1"<-d-"0.*" Access:user
Permission "1.1"<-d-"0.*" Access: permission
Access "0.*"-->"1.1" Dataset:dataset
Datafile "0.*"-->"0.1" Dataset:dataset
Category "1.1"<-d-"0.*" Dataset: category
Category "0.1"<-l-"0.*" Category :parent
Datafile "0.*"-->"1.1" User :uploadedBy
Update "0.*"-d->"1.1" User :user
Update "0.*"-d->"1.1" Dataset: dataset



@enduml


</center>